--- a/public/asset/frontend/css/app.css
+++ b/public/asset/frontend/css/app.css
@@ -242,6 +242,7 @@ select {
     display: block;
     float: left;
     margin-right: 10px;
+    margin-bottom: 10px;
     font-weight: bold;
 }
 .property-item:hover,
@@ -511,4 +512,43 @@ body.toggled {
 }
 .logo-mobile {
     padding-top: 8px;
+}
+
+
+.product-detail--rate-checked {
+    color: orange;
+}
+.product-detail--name {
+    color: #306f52;
+    margin-top: 0px;
+}
+.product-detail--code {
+    margin-right: 20px;   
+}
+.product-detail--info {
+    color: #e5101d;
+}
+.product-detail--star {
+    margin-right: 20px;
+}
+.product-detail--price {
+    margin-top: 20px;
+}
+.product-detail--price .price {
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 40px;
+}
+.product-detail--price .price__old {
+    text-decoration: line-through;
+    margin-right: 10px;
+}
+.product-detail--price .price__discount {
+    padding: 5px 10px;
+    color: #fff;
+    font-weight: bold;
+    background: #e5101d;
+}
+.product-detail--form {
+    margin-top: 20px;
 }
