--- a/public/asset/frontend/css/app.css
+++ b/public/asset/frontend/css/app.css
@@ -13,20 +13,35 @@
     width: 100%;
     left: 0;
 }
-.panel {
-    border: 1px solid #e7e7e7;
-    border-top-width: 2px;
+.panel-heading{
+    border-bottom: 1px solid #d7084b;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 5px 15px;
 }
-.panel-heading {
-    background:#f7f7f7;
+.hot-deal .panel {
+    margin-bottom: 0;
+}
+.hot-deal .panel-heading {
+    border:1px solid #ff53b7;
+    border-top: 3px solid #ff53b7;
+    border-bottom: 1px solid #ffebf7;
+    background:#fff;
+    padding-bottom: 12px;
+}
+
+.hot-deal .panel-body {
+    border: 1px solid #cad5d0;
+    border-top: none;
+    padding: 0;
 }
 
 .block-cate-home .box {
-    border: 1px solid #e7e7e7;
-    border-left: none;
-    border-top: none;
     padding-bottom: 15px;
     padding-top: 15px;
+}
+.hot-deal .block-cate-home .box {
+    border-right: 1px solid #e9ebf0;
 }
 
 .block-cate-home .box-item-odd {
@@ -35,6 +50,7 @@
 
 .block-cate-home .panel-heading h4 {
     margin: 0;
+    font-weight: bold;
 }
 
 .product-price-box {
@@ -46,11 +62,7 @@
 }
 .product-name {
     display: block;
-    padding: 5px 0;
     width: 100%;
-    height: 26px;
-    line-height: 26px;
-    overflow: hidden;
 }
 .product--slider--item {
     height: 300px !important;
@@ -115,7 +127,6 @@
 .product-info a {
     font-size: 14px;
     font-weight: normal;
-    height: 20px;
     overflow: hidden;
 }
 .add-to-cart {
@@ -254,9 +265,9 @@ select {
     float: left;
     overflow: hidden;
     padding: 2px;
-    border: solid 1px #888;
+    border: solid 1px #ccc;
     cursor: pointer;
-    margin-right: 10px;
+    margin: 0 5px 5px 0px;
 }
 .property-item_detail:hover,
 .property-item_detail.active {
@@ -514,7 +525,222 @@ body.toggled {
     padding-top: 8px;
 }
 
+.product-detail .code span {
+    color: #c00979;
+    font-weight: bold;
+}
+.product-detail .rating div {
+    float: left;
+}
+.product-detail .rating .checked {
+    color: #ff5300;
+}
+.product-detail .rating div:first-child {
+    margin-right: 40px;
+}
+.product-detail .price {
+    color: #ff0033;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: left;
+    margin-top: 20px;
+}
+.product-detail .fs-origin-price {
+    font-size: 14px;
+    color: #000;
+    font-weight: normal;
+    text-decoration: line-through;
+    margin:0 20px 0 40px;
+}
+.product-detail .fs-discount {
+    font-size: 14px;
+    background: #e60041;
+    display: inline-block;
+    padding: 5px;
+    color: #fff;
+}
+.product-detail .color-info {
+    margin-top: 20px;
+}
+.product-detail .color-info label{
+    font-weight: normal;
+}
+.product-detail .color-info img {
+    width: 40px;
+    height: 40px;
+}
+.product-detail .quality input {
+    width: 50px;
+    height: 30px;
+    background: #f3f3f3;
+    border: 1px solid #eaeaea;
+    margin-top: 20px;
+    border-radius: 3px;
+}
+.product-description {
+    margin-top: 50px;
+}
+.product-description .nav-tabs {
+    background: #eaeaea;
+    font-weight: 700;
+    padding: 0 20px;
+    border-bottom: 1px solid #eaeaea;
+}
+.product-description .nav-tabs>li>a {
+    padding: 7px 20px;
+}
+.product-description .nav-tabs>li.active>a {
+    color: #c00878;
+    background-color: #eaeaea;
+    border: none;
+    border-bottom: 3px solid #c00878;
+}
 
+.product-detail .carousel-inner {
+  position: relative;
+  width: 100%;
+  min-height: 300px;
+  }
+
+.product-detail  .carousel-control.right {
+  right: 0;
+  left: auto;
+  background-image: none !important;
+  background-repeat: repeat-x;
+}
+.product-detail  .carousel-control.left {
+  left: 0;
+  right: auto;
+  background-image: none !important;
+  background-repeat: repeat-x;
+}
+.product-detail #carousel-example-generic {
+    margin: 20px auto;
+    width: 100%;
+}
+
+.product-detail #carousel-custom {
+    margin: auto;
+    width: 400px;
+}
+.product-detail #carousel-custom .carousel-indicators {
+    margin: 10px 0 0;
+    overflow: auto;
+    position: static;
+    text-align: left;
+    white-space: nowrap;
+    width: 100%;
+    overflow:hidden;
+}
+.product-detail #carousel-custom .carousel-indicators li {
+    background-color: transparent;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    display: inline-block;
+    height: auto;
+    margin: 0 !important;
+    width: auto;
+}
+.product-detail #carousel-custom .carousel-indicators li img {
+    display: block;
+    opacity: 0.5;
+}
+.product-detail #carousel-custom .carousel-indicators li.active img {
+    opacity: 1;
+}
+.product-detail #carousel-custom .carousel-indicators li:hover img {
+    opacity: 0.75;
+}
+.product-detail #carousel-custom .carousel-outer {
+    position: relative;
+}
+.product-detail .carousel-indicators li img {
+  height: 66px;
+  width: 52px;
+}
+.product-detail .code span {
+    color: #c00979;
+    font-weight: bold;
+}
+.product-detail .rating div {
+    float: left;
+}
+.product-detail .rating .checked {
+    color: #ff5300;
+}
+.product-detail .rating div:first-child {
+    margin-right: 40px;
+}
+.price {
+    color: #ff0033;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: left;
+    margin-top: 20px;
+}
+.fs-card-origin-price {
+    font-size: 16px;
+}
+.fs-origin-price {
+    font-size: 14px;
+    color: #000;
+    font-weight: normal;
+    text-decoration: line-through;
+    margin:0 20px 0 40px;
+}
+.item .fs-origin-price {
+    margin: 0 5px;
+}
+.item .fs-discount {
+    font-size: 13px;
+    background: #e60041;
+    display: inline-block;
+    padding: 0px 2px;
+    color: #fff;
+}
+.fs-discount {
+    font-size: 14px;
+    background: #e60041;
+    display: inline-block;
+    padding: 5px;
+    color: #fff;
+}
+.product-detail .color-info {
+    margin-top: 20px;
+}
+.product-detail .color-info label{
+    font-weight: normal;
+}
+.product-detail .color-info img {
+    width: 40px;
+    height: 40px;
+}
+.product-detail .quality input {
+    width: 50px;
+    height: 30px;
+    background: #f3f3f3;
+    border: 1px solid #eaeaea;
+    margin-top: 20px;
+    border-radius: 3px;
+}
+.product-description {
+    margin-top: 50px;
+}
+.product-description .nav-tabs {
+    background: #eaeaea;
+    font-weight: 700;
+    padding: 0 20px;
+    border-bottom: 1px solid #eaeaea;
+}
+.product-description .nav-tabs>li>a {
+    padding: 7px 20px;
+}
+.product-description .nav-tabs>li.active>a {
+    color: #c00878;
+    background-color: #eaeaea;
+    border: none;
+    border-bottom: 3px solid #c00878;
+}
 .product-detail--rate-checked {
     color: orange;
 }
@@ -523,7 +749,7 @@ body.toggled {
     margin-top: 0px;
 }
 .product-detail--code {
-    margin-right: 20px;   
+    margin-right: 20px;
 }
 .product-detail--info {
     color: #e5101d;
@@ -551,4 +777,344 @@ body.toggled {
 }
 .product-detail--form {
     margin-top: 20px;
+}
+/* oOo Menu category product oOo*/
+.menu-category ul li {
+    font-size: 13px;
+    line-height: 30px;
+    padding: 0;
+}
+::-webkit-scrollbar {
+    width: 10px;
+}
+.menu-scroll {
+    height: 190px;
+    overflow: auto;
+}
+
+/* Track */
+.menu-scroll::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 0;
+}
+
+/* Handle */
+.menu-scroll::-webkit-scrollbar-thumb {
+    background: #c00878;
+    border-radius: 0;
+}
+
+/* Handle on hover */
+.menu-scroll::-webkit-scrollbar-thumb:hover {
+    background: #c00878;
+    border-radius: 0;
+}
+.sidebar {
+    border-right: 1px solid #f0f0f0;
+}
+.sidebar li {
+    padding: 5px 0;
+    font-size: 13px;
+}
+.sidebar li input[type=checkbox] {
+    margin: 0 10px 0 0px;
+}
+.sidebar .row {
+    padding: 20px 20px 20px 15px;
+}
+.sidebar h4 {
+    font-size: 14px;
+}
+.menu-category h4 {
+    color: #cc0066;
+}
+.menu-category li.active a {
+    color: #cc0066;
+}
+/* oOo product detail oOo*/
+.accordian {
+    width: 100%;
+    overflow: hidden;
+}
+.accordian {
+    overflow: hidden;
+}
+.intro-seller {
+    border: 1px solid #c00a79;
+}
+.intro-seller h4 {
+    color: #c00878;
+    border-bottom: 1px solid #c00a79;
+    text-align: center;
+    font-weight: 700;
+    font-size: 14px;
+    padding-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.intro-seller ul {
+    padding: 0 10px 0 10px;
+}
+.intro-seller li {
+    color: #cc0066;
+    font-weight: 700;
+    padding: 0px 0 26px 30px;
+}
+.intro-seller li:nth-child(1) {
+    background: url(../img/seller-1.jpg) top left no-repeat;
+}
+.intro-seller li:nth-child(2) {
+    background: url(../img/seller-2.jpg) top left no-repeat;
+}
+.intro-seller li:nth-child(3) {
+    background: url(../img/seller-3.jpg) top left no-repeat;
+}
+.intro-seller li:nth-child(4) {
+    background: url(../img/seller-4.jpg) top left no-repeat;
+    padding-bottom: 15px;
+}
+.intro-seller li p {
+    color: #333;
+    font-weight: normal;
+}
+/*A small hack to prevent flickering on some browsers*/
+.accordian ul {
+    width: 1200px;
+    /*This will give ample space to the last item to move
+    instead of falling down/flickering during hovers.*/
+}
+
+.accordian li {
+    position: relative;
+    display: block;
+    width: 205px;
+    float: left;
+
+    border-left: 1px solid #888;
+
+    box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.5);
+
+    /*Transitions to give animation effect*/
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    /*If you hover on the images now you should be able to
+    see the basic accordian*/
+}
+
+/*Reduce with of un-hovered elements*/
+.accordian ul:hover li {width: 40px;}
+/*Lets apply hover effects now*/
+/*The LI hover style should override the UL hover style*/
+.accordian ul li:hover {width: 640px;}
+
+
+.accordian li img {
+    display: block;
+    height: 375px;
+}
+
+/*Image title styles*/
+.image_title {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0; bottom: 0;
+width: 640px;
+
+}
+.image_title a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 20px;
+    font-size: 16px;
+}
+.suggestion-for-you {
+    margin: -5px;
+    border: 1px solid #c7d1cd;
+    margin:20px 0 35px 0;
+    padding-bottom: 20px;
+}
+.suggestion-for-you h4 {
+    text-indent: 20px;
+    font-size: 16px;
+    font-weight: 700;
+}
+.product-other .product_image {
+    width: 50%;
+    float: left;
+}
+.product-other .product_image img{
+    width: 100%;
+    float: left;
+}
+.product-other .product_values {
+    width: 50%;
+    float: left;
+}
+.product-detail .product-other .fs-origin-price {
+    margin: 0;
+}
+.product-other {
+    border: 1px solid #ececec;
+    margin-top: 20px;
+}
+.product-other h4 {
+    color: #c00878;
+    border-bottom: 1px solid #c00878;
+    border-left: 5px solid #c00878;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 10px;
+    text-align: center;
+    margin: 0;
+}
+.product_item {
+    border-bottom: 1px solid #ececec;
+    padding: 20px 10px;
+}
+.product-other .view-more {
+    text-align: center;
+    background: #f7f7f7;
+    padding: 10px;
+    color: #666673;
+}
+.btn-grey{
+    background-color:#D8D8D8;
+    color:#FFF;
+}
+.rating-block{
+    padding:15px 15px 20px 15px;
+    border-radius:3px;
+    text-align: center;
+}
+.rating-block h4 {
+    font-weight: normal;
+    font-size: 16px;
+}
+.btn-comment {
+    background: #ff5000;
+    color: #fff;
+    padding: 10px 50px;
+    font-weight: 700;
+    font-size: 14px;
+}
+.btn-comment:hover {
+    background: #e94b03;
+    color: #fff;
+ }
+.bold{
+    font-weight:700;
+}
+.padding-bottom-7{
+    padding-bottom:7px;
+}
+/* oOo review product oOo*/
+.review-block{
+    padding:15px;
+    border-radius:3px;
+    margin-bottom:15px;
+}
+.review-block h5 {
+    background: #f7f7f7;
+    padding: 10px;
+    display: block;
+}
+.review-block .img-rounded {
+    border-radius: 100px;
+    width: 100%;
+}
+.review-block-name{
+    font-size:12px;
+    margin:10px 0;
+}
+.review-block-date{
+    font-size:12px;
+}
+.review-block-rate{
+    font-size:13px;
+    margin-bottom:15px;
+    float: left;
+}
+.review-block-rate-date {
+    color: #afafac;
+    font-size: 12px;
+    margin-left: 10px;
+    display: inline-block;
+}
+.review-block-title{
+    font-size:15px;
+    font-weight:700;
+    margin-bottom:10px;
+}
+.review-block-description{
+    font-size:13px;
+    clear: both;
+}
+.verify-order {
+    color: #5897d0;
+    background: url(../img/verify.gif) no-repeat left;
+    padding-left: 25px;
+    margin-left: 10px;
+    font-weight: normal;
+}
+#paging {
+    text-align: center;
+}
+#paging a {
+    margin-left: 5px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #515151;
+}
+#product-rating .progress {
+    border-radius: 0;
+    margin: 10px 10px;
+    height: 12px;
+    background: #e8e8e8;
+    box-shadow: none;
+}
+#product-rating .pull-left {
+    line-height: 33px;
+}
+#product-rating .pull-left span {
+    padding-left: 20px;
+}
+#product-rating .fa-star {
+    color: #ccc;
+}
+#product-rating .start-result {
+    color: #a7afc2;
+}
+#product-rating .fa-star.active {
+    color: #ffc600;
+}
+.rating-write-comment {
+    background: #f7f7f7;
+    padding: 10px;
+}
+#stars-existing {
+    font-size: 30px;
+}
+#stars-existing .fa-star{
+    margin-right: 10px;
+}
+#stars-existing .fa-star.active {
+    color: #ff4f00;
+}
+.rating-write-comment form {
+    margin-top: 20px;
+}
+.rating-write-comment form label {
+    font-weight: normal;
+    font-size: 14px;
+}
+.card-inner{
+    margin-left: 4rem;
+}
+.faq {
+    padding: 20px 0;
+    border-bottom: 1px solid #ccc;
 }
