--- a/public/asset/frontend/css/app.css
+++ b/public/asset/frontend/css/app.css
@@ -733,7 +733,11 @@ body.toggled {
     border-bottom: 1px solid #eaeaea;
 }
 .product-description .nav-tabs>li>a {
-    padding: 7px 20px;
+    padding: 7px 40px;
+}
+.product-description .nav-tabs>li:hover>a {
+    background: #eaeaea;
+    border-bottom: 3px solid #c00878;
 }
 .product-description .nav-tabs>li.active>a {
     color: #c00878;
@@ -1038,11 +1042,21 @@ width: 640px;
     margin-bottom:15px;
     float: left;
 }
-.review-block-rate-date {
+.date {
     color: #afafac;
     font-size: 12px;
     margin-left: 10px;
     display: inline-block;
+}
+.user-question .date {
+    margin-left: 0;
+    color: #057260;
+}
+.like {
+    color: #057250;
+}
+.user-question {
+    color: #057250;
 }
 .review-block-title{
     font-size:15px;
@@ -1117,4 +1131,16 @@ width: 640px;
 .faq {
     padding: 20px 0;
     border-bottom: 1px solid #ccc;
+}
+form.send-comment input {
+    border-radius: 0;
+}
+form.send-comment .btn {
+    margin-left: 10px !important;
+    background: #a91263;
+    padding: 5px 30px;
+    border-radius: 3px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
 }
