--- a/public/asset/frontend/css/app.css
+++ b/public/asset/frontend/css/app.css
@@ -537,6 +537,7 @@ body.toggled {
 }
 .product-detail .rating div {
     float: left;
+    margin-right: 10px;
 }
 .product-detail .rating .checked {
     color: #ff5300;
@@ -568,23 +569,12 @@ body.toggled {
     padding: 5px;
     color: #fff;
 }
-.product-detail .color-info {
+.product-detail--form {
     margin-top: 20px;
 }
-.product-detail .color-info label{
-    font-weight: normal;
-}
-.product-detail .color-info img {
-    width: 40px;
-    height: 40px;
-}
-.product-detail .quality input {
-    width: 50px;
+.product-detail .product-detail-img {
+    width: 30px;
     height: 30px;
-    background: #f3f3f3;
-    border: 1px solid #eaeaea;
-    margin-top: 20px;
-    border-radius: 3px;
 }
 .product-detail .group-cart {
     margin-top: 20px;
@@ -623,13 +613,12 @@ body.toggled {
     border: none;
     border-bottom: 3px solid #c00878;
 }
-
 .product-detail .carousel-inner {
   position: relative;
   width: 100%;
-  min-height: 300px;
-  }
-
+  height: 400px;
+  border: solid 1px #d7d7d7;
+ }
 .product-detail  .carousel-control.right {
   right: 0;
   left: auto;
@@ -646,11 +635,24 @@ body.toggled {
     margin: 20px auto;
     width: 100%;
 }
-
 .product-detail #carousel-custom {
     margin: auto;
     width: 400px;
 }
+
+.product--slider__slider--img {
+    margin: auto;
+}
+
+.product-detail .carousel-inner .item{
+    position: relative;
+    height:100%;
+}
+
+.product-detail--form.form-horizontal .control-label {
+    text-align: left;
+}
+
 .product-detail #carousel-custom .carousel-indicators {
     margin: 10px 0 0;
     overflow: auto;
@@ -672,6 +674,8 @@ body.toggled {
 .product-detail #carousel-custom .carousel-indicators li img {
     display: block;
     opacity: 0.5;
+    width: 50px;
+    height: 50px;
 }
 .product-detail #carousel-custom .carousel-indicators li.active img {
     opacity: 1;
@@ -682,22 +686,17 @@ body.toggled {
 .product-detail #carousel-custom .carousel-outer {
     position: relative;
 }
-.product-detail .carousel-indicators li img {
-  height: 66px;
-  width: 52px;
-}
 .product-detail .code span {
     color: #c00979;
     font-weight: bold;
 }
-.product-detail .rating div {
-    float: left;
+.product-detail__sidebar--manufacturer {
+    display: block;
+    margin-bottom: 10px;
 }
-.product-detail .rating .checked {
-    color: #ff5300;
-}
-.product-detail .rating div:first-child {
-    margin-right: 40px;
+.product--manufacturer,
+.product--manufacturer:hover {
+    color: #306f52;
 }
 .price {
     color: #ff0033;
@@ -733,24 +732,7 @@ body.toggled {
     padding: 5px;
     color: #fff;
 }
-.product-detail .color-info {
-    margin-top: 20px;
-}
-.product-detail .color-info label{
-    font-weight: normal;
-}
-.product-detail .color-info img {
-    width: 30px;
-    height: 30px;
-}
-.product-detail .quality input {
-    width: 50px;
-    height: 30px;
-    background: #f3f3f3;
-    border: 1px solid #eaeaea;
-    margin-top: 20px;
-    border-radius: 3px;
-}
+
 .product-detail .giff {
     margin-top: 20px;
 }
