--- a/public/asset/frontend/css/app.css
+++ b/public/asset/frontend/css/app.css
@@ -585,11 +585,21 @@ body.toggled {
     background: #e50f43;
     border: none;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 10px;
+    margin-right: 14px;
+    margin-bottom: 10px;
 }
 .product-detail .group-cart a:last-child{
+    margin-right: 0px;
+}
+.product-detail .group-cart a.btn--addToCart{
+
+}
+.product-detail .group-cart a.btn--buynow{
     background: #0056af;
-    margin-left: 10px;
+}
+.product-detail .group-cart a.btn--outofstock{
+    background: #8c8c8c;
 }
 .product-detail .group-cart a.btn i {
     font-size: 20px;
@@ -1171,4 +1181,9 @@ form.send-comment .btn {
     padding: 0 0 10px 0;
     margin: 0 0 10px 0;
     border-bottom: 1px solid #eee;
+}
+.product--outofstock {
+    background: #bebfbe;
+    -webkit-filter: grayscale(100%);
+    filter: gray;
 }
